# agent-os

./: .env.example  .gitignore  AGENTOS_IOS_NUITKA_SEED.md  LICENSE  README.md  SKIPPER-DASH-SEED-001.md  SPEC.md  agentOS-build-handoff.md  agentos-ios-build-plan.md  agentos-moe-design.md  agentos-moe-protocol.md  agentos-v1-spec.md  cells.registry.yaml  future-needs.md  ios-port-plan.md  macos-packaging-plan.md  native-client-plan.md  pyproject.toml  skipper-audit.md  tools.registry.yaml
agentos/: __init__.py  __main__.py  analytics.py  cli.py  config.py  config_ui.py  context.py  dashboard_ui.py  dbexplorer_ui.py  hooks.py  llm.py  loadscreen_ui.py  main.py  observability.py  paths.py  pipeline.py  registry.py  runtime.py  skipper_store.py  ui.py
cells/context_builder/: cell.py
cells/ingestion/: cell.py  extractors.py
cells/llm_interface/: cell.py
cells/memory/: cell.py  metrics.py  (+2 more)
clients/: IOS_BUILD.md  MACOS_BUILD.md  README.md  UPDATES.md  assemble-python-ios.sh  build-dmg.sh  build-kernel.sh  build-local.sh  build-macos.sh  project.yml  publish-update.sh  release-update.sh  serve-updates.sh  stage-python.sh
docs/: appcast.xml  index.html
hooks/: context_update.py  memory_persist.py  signal_extract.py  turn_metrics.py
manifests/: __smoke.yaml  _inproc_smoke.yaml  skipper.yaml  ui_smoke.yaml
personas/: __smoke.yaml  _inproc_smoke.yaml  skipper.yaml  ui_smoke.yaml
tests/: conftest.py  test_analytics.py  test_cell_context_builder.py  test_cell_llm_interface.py  test_cell_memory.py  test_cell_mode_control.py  test_config.py  test_context.py  test_hooks.py  test_observability.py  test_pipeline.py  test_registry.py  test_skipper_dashboard.py
tools/: seed_skipper_demo.py
(+48 files in other folders)
