[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS — the foundation infrastructure for the Blacksky agent fleet."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - Blacksky LLC" }
authors = [
    { name = "Mario Moorhead", email = "mario@blacksky.com" },
]
keywords = ["agents", "llm", "ai", "agentos", "blacksky"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Kernel
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Misc
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Pulled in by individual cells/tools when they need them — kept out of the
# kernel install footprint so a minimal agentOS is small.
llm = [
    "litellm>=1.35",
]
memory = [
    "sqlalchemy>=2.0",
    "redis>=5.0",
]
retrieval = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
]

[project.scripts]
agentos = "agentos.cli:app"

[tool.setuptools]
package-dir = { "agentos" = "core" }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cells*", "tools*", "hooks*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
